--- a/7thand8thgrade.html
+++ b/7thand8thgrade.html
@@ -226,15 +226,15 @@
                                                         <td>@ Lakeland</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>Septempber 6th</td>
+                                                        <td>September 6th</td>
                                                         <td>6:00 PM</td>
                                                         <td>VS Houston 1</td>
                                                       </tr>
                                                       <tr>
                                                         <tr>
-                                                        <td>Septempber 13th</td>
+                                                        <td>September 13th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>>@ Bartlett vs Bon Lin</td>
+                                                        <td>@ Bartlett vs Bon Lin</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 20th</td>
