--- a/varsity.html
+++ b/varsity.html
@@ -347,29 +347,14 @@
                                                         <th>Location</th>
                                                       </tr>
                                                       <tr>
-                                                        <td>August 20th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>@ Arlington</td>
-                                                      </tr>
-                                                      <tr>
                                                         <td>August 27th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Ridgeway (JV Only)</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>August 27th</td>
-                                                        <td>6:30 PM</td>
-                                                        <td>vs Covington (9th grade Only)</td>
+                                                        <td>vs Ridgeway</td>
                                                       </tr>
                                                       <tr>
                                                         <td>August 30th</td>
                                                         <td>6:00 PM</td>
                                                         <td>vs Munford</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>Septempber 6th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Fayette Ware (Thursday, 9th grade Only)</td>
                                                       </tr>
                                                       <tr>
                                                         <td>Septempber 10th</td>
