Edited Coaching Staff
Livi

--- a/freshman.html
+++ b/freshman.html
@@ -439,16 +439,25 @@
         </div>
 
         <div class="row featurette">
-          <div class="col-md-7 order-md-1 order-2">
-            <h2 class="featurette-heading pl-3 ">Eric Wiley
-            <br><span class="text-muted">Head Coach</span></h2>
-            <p class="lead pl-3">Eric Wiley is the Head Coach for the Freshmen team. He is in his 14th year of coaching young men. Eric is married to Cecilee, they have three children: Cade, Seth, and Kacy. Eric’s words to live by: “Show class, have pride, and display character. If you do, winning takes care of itself” —Paul “Bear” Bryant.</p>
+          <div class="col-md-7 order-md-2 order-2 pl-3">
+            <h2 class="featurette-heading pl-3">Tom Graham
+            <br><span class="text-muted">Linebackers Coach</span></h2>
+            <p class="lead pl-3">Coach Graham is entering his 11th year at Collierville High School where he teaches Honors and Standard Chemistry. He served as the head wrestling coach for the 9 years and coached the freshman football team for 4 years before moving up to coach linebackers. He earned a BS in Chemistry and History at Crichton College, a MAEd at Union University, and his EdS at Liberty University. He is a graduate of Collierville High School where he participated on the wrestling team and coached the youth program while completing his undergraduate degrees.</p>
           </div>
-          <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
+          
+          <div class="col-md-4 order-md-1 order-1 pl-3">
+            <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/graham.jpg" alt="Generic placeholder image">
           </div>
         </div>
-
+<div class="col-md-7 order-md-1 order-2">
+            <h2 class="featurette-heading pl-3 ">Eric Wiley
+            <br><span class="text-muted">Coach</span></h2>
+            <p class="lead pl-3">Eric Wiley is in his 15th year of coaching young men. Eric is married to Cecilee, they have three children: Cade, Seth, and Kacy. Eric’s words to live by: “Show class, have pride, and display character. If you do, winning takes care of itself” —Paul “Bear” Bryant.</p>
+          </div>
+          <div class="col-md-4 ml-3 order-md-2 order-1">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
+          </div>
+        </div>
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2 order-2 pl-3">
@@ -469,6 +478,16 @@
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
+          </div>
+        </div>
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
+            <h2 class="featurette-heading pl-3">Seth Bachelor
+            <br><span class="text-muted">Coach</span></h2>
+            <p class="lead pl-3">TBD.</p>
+          </div>
+          <div class="col-md-4 order-md-1 order-1 ml-3">
+            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
         
