--- a/freshman.html
+++ b/freshman.html
@@ -449,6 +449,7 @@
             <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/graham.jpg" alt="Generic placeholder image">
           </div>
         </div>
+        <div class="row featurette">
 <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Eric Wiley
             <br><span class="text-muted">Coach</span></h2>
