--- a/7thand8thgrade.html
+++ b/7thand8thgrade.html
@@ -373,9 +373,9 @@
                                                       </tr>
                                                       <tr>
                                                         <tr>
-                                                        <td>Septempber 13th</td>
+                                                        <td>September 13th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>>vs Lakeland</td>
+                                                        <td>vs Lakeland</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 20th</td>
