--- a/news.html
+++ b/news.html
@@ -319,9 +319,9 @@
   </div>
  <div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
-            <h4 class="featurette-heading order-md-2 pl-2">June 28th - Old Dragons Catching Up - #DragonsattheNextLevel</h4><p class="lead">
+            <h4 class="featurette-heading order-md-2 pl-2">June 28th - Former Players/Recent CHS Football Grads - #DragonsattheNextLevel</h4><p class="lead">
             <ul class="newsstuff  ml-5">
-              <li>Coach O'Neill was able to attend the Spring scrimmage at the Liberty Bowl where a number of his former players (pictured below) were able to be a part of the festivities. Playing with Collierville means playing at the next level. <br><br>From left to right: Collierville Dragon/ Memphis Tiger John Hassell, Coach O'Neill, Collierville Dragon/ Memphis Tiger Austin Hall, Collierville Dragon/ Memphis Tiger Tyler Garvey, and former Memphis Tiger/St Louis Ram - Cannon Smith <br><br>#DragonUp <br><br>Go Dragons!</li>
+              <li>Coach O'Neill was able to attend the Spring scrimmage at the Liberty Bowl where a number of his recent CHS football graduates  (pictured below) were able to be a part of the festivities. Playing with Collierville means playing at the next level. <br><br>From left to right: Collierville Dragon/ Memphis Tiger John Hassell, Coach O'Neill, Collierville Dragon/ Memphis Tiger Austin Hall, Collierville Dragon/ Memphis Tiger Tyler Garvey, and former Memphis Tiger/St Louis Ram - Cannon Smith <br><br>#DragonUp <br><br>Go Dragons!</li>
               <li>            <img class="img-fluid mx-auto img-thumbnail" style="max-height:200px; margin-top:5%;transform: rotate(90deg);" src="imgs/oldplayersgraduated.jpeg" alt="Generic placeholder image">
 </li>
             </ul>
