Updated Varsity and Freshman Coaches
Livi

--- a/freshman.html
+++ b/freshman.html
@@ -485,7 +485,14 @@
           <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Seth Bachelor
             <br><span class="text-muted">Coach</span></h2>
-            <p class="lead pl-3">TBD.</p>
+            <p class="lead pl-3">Seth Bachelor is the Physical Education Teacher at Collierville Middle School and the
+Head Middle School Baseball Coach. He will also serve as an Assistant for the
+Freshman Football team. Coach Bachelor spent 2 years as an Assistant Coach at
+Raleigh Egypt High School and served as the Defensive Coordinator for the Raleigh
+Egypt Middle School Football team. He also has also coached Varsity: Softball,
+Basketball, and Soccer while teaching at Raleigh Egypt High School and Millington
+Central High School. Coach Bachelor attended the University of North Alabama with
+a Bachelor of Science in Education. He is married to Brittanee Bachelor.</p>
           </div>
           <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
