New News, Coach Updates

--- a/news.html
+++ b/news.html
@@ -297,26 +297,27 @@
 
 <hr class="featurette-divider">
 
-  <div class="row featurette ml-2">
+<div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
-            <h4 class="featurette-heading order-md-2 pl-2">June 1st - New CHS Football Facilities are Under Progress!</h4><p class="lead">
+            <h4 class="featurette-heading order-md-2 pl-2">July 3rd - Memphis All-Conference Tight End Joins The Dragons</h4><p class="lead">
             <ul class="newsstuff ml-5">
-              <li>Preparation for moving to the new faciliities has begun! While the time table has shifted, we are very excited to begin this process and are wishing the best for all involved as we take our Dragons to new heights this year! <br><br> Go Dragons!</li>
+              <li>We would like to welcome former University of Memphis All-American Conference Tight End, Daniel Montiel, to the CHS Faculty and Football Staff. Montiel played in 45 games for the Tigers and made 20 starts. He hauled in 45 career catches for 617 yards and seven touchdowns. He was a member of a high-prolific offensive unit in 2015 and 2016 under the direction of two of college football's best coaches - Justin Fuente and Mike Norvell. The Arlington, Texas native will coach wide receiver's at Collierville High School and work closely with offensive coordinator Tommy Miller. <br><br> Go Dragons!</li>
             </ul>
            </p>
     </div>
   </div>
+
   <div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
-            <h4 class="featurette-heading order-md-2 pl-2">June 4th - Summer Fun W/Coach O'Neill</h4><p class="lead">
-            <ul class="newsstuff  ml-5">
-              <li>Coach O'Neill hosted most of the Varsity Seniors to his house for a fun-filled day of swimming and team bonding. Just another way that our Coach cares for his players. <br><br>Go Dragons!</li>
-              <li>            <img class="img-fluid mx-auto img-thumbnail" style="max-height:200px; margin-top:5%;transform: rotate(90deg);" src="imgs/Swimmingday.jpeg" alt="Generic placeholder image">
-</li>
+            <h4 class="featurette-heading order-md-2 pl-2">July 3rd - Former SEC Coach Joins The Dragons</h4><p class="lead">
+            <ul class="newsstuff ml-5">
+              <li>We would like to welcome John White to the CHS Faculty and Football Staff. Coach White comes to Collierville High School after spending the last two years as a Graduate Assistant Running Backs Coach at Mississippi State University. He served as the team's Interim Running Backs Coach at last year's TaxSlayer Bowl. Prior to his duties with Coach Dan Mullen and the Bulldogs, White was an offensive assistant and quality control coach at Princeton University. The 2009 Collierville High School graduate returns home and will begin working with the Dragon Football team immediately. He will join the Social Studies department at CHS. <br><br> Go Dragons!</li>
             </ul>
            </p>
     </div>
   </div>
+
+
  <div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
             <h4 class="featurette-heading order-md-2 pl-2">June 28th - Former Players/Recent CHS Football Grads - #DragonsattheNextLevel</h4><p class="lead">
@@ -328,6 +329,30 @@
            </p>
     </div>
   </div>
+
+ <div class="row featurette ml-2">
+    <div class="col-md-12 order-md-2 "> 
+            <h4 class="featurette-heading order-md-2 pl-2">June 4th - Summer Fun W/Coach O'Neill</h4><p class="lead">
+            <ul class="newsstuff  ml-5">
+              <li>Coach O'Neill hosted most of the Varsity Seniors to his house for a fun-filled day of swimming and team bonding. Just another way that our Coach cares for his players. <br><br>Go Dragons!</li>
+              <li>            <img class="img-fluid mx-auto img-thumbnail" style="max-height:200px; margin-top:5%;transform: rotate(90deg);" src="imgs/Swimmingday.jpeg" alt="Generic placeholder image">
+</li>
+            </ul>
+           </p>
+    </div>
+  </div>
+
+
+  <div class="row featurette ml-2">
+    <div class="col-md-12 order-md-2 "> 
+            <h4 class="featurette-heading order-md-2 pl-2">June 1st - New CHS Football Facilities are Under Progress!</h4><p class="lead">
+            <ul class="newsstuff ml-5">
+              <li>Preparation for moving to the new faciliities has begun! While the time table has shifted, we are very excited to begin this process and are wishing the best for all involved as we take our Dragons to new heights this year! <br><br> Go Dragons!</li>
+            </ul>
+           </p>
+    </div>
+  </div>
+ 
 
         <!-- /END THE FEATURETTES -->
 
