--- a/varsity.html
+++ b/varsity.html
@@ -672,7 +672,7 @@
           <div class="col-md-7 order-md-2 order-2 pl-3">
             <h2 class="featurette-heading pl-3">Tyler Perkins
             <br><span class="text-muted">Coach</span></h2>
-            <p class="lead pl-3">TBD</p>
+            <p class="lead pl-3">Coach Tyler Perkins is joining the varsity staff after previously coaching the freshman team last year. He played under Coach Miller at Bolton High School from 2006-2009 and continued his football career at Rhodes College for 4 years after. He was a four year letter-man who mainly played quarterback, but also spent time at wide receiver and punter during his college career. He was a 2nd team All-Conference punter in 2013 and received conference player of the week honors on multiple occasions throughout his career. </p>
           </div>
           <div class="col-md-4 order-md-1 order-1 ml-3">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
