6th Grade Schedule Change
Livi

--- a/6thgrade.html
+++ b/6thgrade.html
@@ -212,34 +212,44 @@
                                                         <th>Location</th>
                                                       </tr>
                                                       <tr>
-                                                        <td>August 21st</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Arlington</td>
+                                                        <td>August 18th</td>
+                                                        <td>9:00 AM</td>
+                                                        <td>vs Whitehaven</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>August 28th</td>
+                                                        <td>August 25th</td>
+                                                        <td>9:00 AM</td>
+                                                        <td>vs Shelby Co. @ Ellendale Park</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>Septempber 8th</td>
+                                                        <td>9:00 AM</td>
+                                                        <td>vs Tipton</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>Septempber 18th</td>
                                                         <td>6:30 PM</td>
-                                                        <td>Ridgeway</td>
+                                                        <td>vs Tipton @ Arlington</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>Septempber 11th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>Munford</td>
+                                                        <td>September 22nd</td>
+                                                        <td>9:00 AM</td>
+                                                        <td>vs Arlington</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>September 18th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Cordova</td>
+                                                        <td>September 26th</td>
+                                                        <td>6:30 PM</td>
+                                                        <td>vs GFL Black @ GFL</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>September 25th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Houston</td>
+                                                        <td>October 2nd</td>
+                                                        <td>6:30 PM</td>
+                                                        <td>vs Tipton @ Arlington</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>October 16th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Bartlett</td>
+                                                        <td>October 17th</td>
+                                                        <td>6:30 PM</td>
+                                                        <td>vs GFL Silver @ GFL</td>
                                                       </tr>
                                                     </tbody>
                                                   </table>
