--- a/freshman.html
+++ b/freshman.html
@@ -291,7 +291,7 @@
                                                       <tr>
                                                         <td>August 27th</td>
                                                         <td>6:30 PM</td>
-                                                        <td>vs Covington</td>
+                                                        <td>@ Covington</td>
                                                       </tr>
                                                       <tr>
                                                         <td>August 30th</td>
@@ -300,8 +300,8 @@
                                                       </tr>
                                                       <tr>
                                                         <td>September 6th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Fayette Ware</td>
+                                                        <td>TBD</td>
+                                                        <td>TBD</td>
                                                       </tr>
                                                       <tr>
                                                         <td>Septempber 10th</td>
