--- a/6thgrade.html
+++ b/6thgrade.html
@@ -436,7 +436,7 @@
           <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Lamonte Bethea
             <br><span class="text-muted">Head Coach</span></h2>
-            <p class="lead pl-3">Native of Greensboro, N.C.  Played three years of varsity football for Walter Hines Page high school.  Graduated in 1995 with a BS in Mathematics from North Carolina A&T State University.  Follow on career as a Naval aviator flying the EA6B and T-45 aircraft for the United States Navy.  Currently a Captain and Flex instructor for FedEx, B-757/767 aircraft.  Assistant coach for the Collierville Falcons during 2014-2015 season, Collierville Parks and Recreation Football League.  Head Coach for Collierville Dragons Grey, 3rd/4th Grade football, 2015.  Head Coach for Collierville Dragons White, 9U/10U football for highly successful 2016 season.  Current Head Coach for Collierville Dragons 6th Grade football.</p>
+            <p class="lead pl-3">Native of Greensboro, N.C.  Played three years of varsity football for Walter Hines Page high school.  Graduated in 1995 with a BS in Mathematics from North Carolina A&T State University.  Follow on career as a Naval aviator flying the EA6B and T-45 aircraft for the United States Navy.  Currently a Captain and Flex instructor for FedEx, B-757/767 aircraft.  Assistant coach for the Collierville Falcons during 2014-2015 season, Collierville Parks and Recreation Football League.  Head Coach for Collierville Dragons Grey, 3rd/4th Grade football, 2015.  Head Coach for Collierville Dragons White, 9U/10U football for highly successful 2016 season.  Current Head Coach for Collierville Dragons 6th Grade football. Mr. Bethea is currently an instructor/evaluator for FedEx Express Corporation. Go DRAGONS!!!</p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
@@ -503,8 +503,7 @@
           <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Ben Pelliterri
             <br><span class="text-muted">Running Backs Coach</span></h2>
-            <p class="lead pl-3">Mr. Belliterri is working with the CHS Varsity Running Backs. This will be his second year coaching on the varsity level. Ben is also a graduate of Collierville HIgh School.
-
+            <p class="lead pl-3">Mr. Belliterri is working with the CHS Varsity Running Backs. This will be his second year coaching on the varsity level. Ben is also a graduate of Collierville High School.
 </p>
           </div>
           <div class="col-md-4 order-md-2 order-1 ml-3">
@@ -512,7 +511,39 @@
           </div>
         </div>
 
+<div class="row featurette">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
+            <h2 class="featurette-heading pl-3">Cornell McFaden
+            <br><span class="text-muted">Assisstant Coach</span></h2>
+            <p class="lead pl-3">Coach McFaden is in his second year of coaching at Collierville High Schoool. He has coached AAU Basketball Elite Eagles, assisstant coached Southside Wildcats, and Germantwon Basketball. He worked 20 years as a Warehouse Consultant.</p>
+          </div>
+          <div class="col-md-4 order-md-1 order-1 ml-3">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
+          </div>
+        </div>
         
+        <div class="row featurette">
+          <div class="col-md-7 order-md-1 order-2">
+            <h2 class="featurette-heading pl-3 ">Jeremy Pittman
+            <br><span class="text-muted">Assisstant Coach</span></h2>
+            <p class="lead pl-3">Mr. Pittman has head coached 1 year for Collierville Rec and assisstant coached for 4 years in Collierville Youth Football program. He has worked 20+ years as a Physical Therapist and is a 10 year sponsor of the Dragon Football Program.</p>
+          </div>
+          <div class="col-md-4 order-md-2 order-1 ml-3">
+            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
+          </div>
+        </div>
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2 order-2 pl-3">
+            <h2 class="featurette-heading pl-3">Riddell Greene
+            <br><span class="text-muted">Offensive Coordinator</span></h2>
+            <p class="lead pl-3">Coach Greene has cooached for four years as assistant coach for Collierville youth football, 9/10 yr olds and 6th grade. He was Defensive Coordinator laast year for 2017 6th grade football season. GO DRAGONS!!!</p>
+          </div>
+          <div class="col-md-4 order-md-1 order-1 ml-3">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
+          </div>
+        </div>
+
         </div>
         
 
