--- a/6thgrade.html
+++ b/6thgrade.html
@@ -459,7 +459,7 @@
           <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Peter Hyman
             <br><span class="text-muted">Offensive/Defensive Line Coach</span></h2>
-            <p class="lead pl-3">/p>
+            <p class="lead pl-3"></p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
             <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
