--- a/6thgrade.html
+++ b/6thgrade.html
@@ -18,6 +18,16 @@
                     <link rel="stylesheet" href="css/style.css">
                     </head>
                     <body>
+                        <ul id="registrationdropdown" class="dropdown-content">
+                        <li><a style="color:black;" href="http://www.teamsideline.com/Collierville">Football Registration</a></li>
+                        <li><a style="color:black;" href="https://goo.gl/forms/z7avA6Mjw0vGUQpC3">Concession Volunteers Registration</a></li>
+                     
+                      </ul>
+                      <ul id="registrationdropdownalt" class="dropdown-content">
+                        <li><a style="color:black;" href="http://www.teamsideline.com/Collierville">Football Registration</a></li>
+                        <li><a style="color:black;" href="https://goo.gl/forms/z7avA6Mjw0vGUQpC3">Concession Volunteers Registration</a></li>
+                     
+                      </ul>
                       <!-- Start Webpage -->
                       <!-- Start dropdown menu -->
                       <!-- Start dropdown menu -->
