--- a/6thgrade.html
+++ b/6thgrade.html
@@ -127,9 +127,10 @@
                                                   <a href="schedule.html" target="_blank">Schedule</a>
                                                 </li>
                                                 <li>
-                                                  <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                                  <a class="dropdown-button" href="#!" data-activates="registrationdropdownalt" data-beloworigin="true">Registration
+                                                    <i class="mdi-navigation-arrow-drop-down right"></i>
+                                                  </a>
                                                 </li>
-                                                <li>
                                                   <a href="seasonticket.html" target="_blank">Season Tickets</a>
                                                 </li>
                                                 <li>
@@ -162,9 +163,23 @@
                                             <li>
                                               <a href="news.html" target="_blank">News</a>
                                             </li>
-                                            <li>
-                                              <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
-                                            </li>
+                                           <li>
+                                              <ul class="collapsible collapsible-accordion">
+                                          
+                                                 <li>
+                                                    <a  class="dropdown-trigger" data-activates = "registrationdropdown" style="color:black;">Registration <i class="material-icons right" style="margin-right:0;">arrow_drop_down</i></a>
+                                                    <div class="collapsible-body">
+                                                       <ul>
+                                                          <li><a class="waves-effect waves-blue" href="#"><i class="material-icons">fullscreen</i>Full Screen</a></li>
+                                                          <li><a class="waves-effect waves-blue" href="#"><i class="material-icons">swap_horiz</i>Horizontal Menu</a></li>
+                                                          <li>
+                                                             <div class="divider"></div>
+                                                          </li>
+                                                       </ul>
+                                                    </div>
+                                                 </li>
+                                              </ul>
+                                           </li>
                                              <li>
                                                   <a href="seasonticket.html" target="_blank">Season Tickets</a>
                                             </li>
@@ -554,5 +569,26 @@
                                                   <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js'></script>
                                                   <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js'></script>
                                                   <script  src="js/index.js"></script>
+                                                  <script>
+                                                    $(document).ready(function(){
+                                                            $('.button-collapse').sideNav({
+                                                                menuWidth: 300, // Default is 300
+                                                                edge: 'left', // Choose the horizontal origin
+                                                                closeOnClick: false, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                                                                draggable: true // Choose whether you can drag to open on touch screens
+                                                              }
+                                                            );
+
+ document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.dropdown-trigger');
+    var instances = M.Dropdown.init(elems, options);
+  });
+
+  // Or with jQuery
+
+  $('.dropdown-trigger').dropdown();
+                                                            // START OPEN
+                                                          });
+                                                        </script>
                                                 </body>
                                               </html>
