--- a/schedule.html
+++ b/schedule.html
@@ -148,7 +148,9 @@
                                                   <a href="schedule.html" target="_blank">Schedule</a>
                                                 </li>
                                                 <li>
-                                                  <a href="http://www.teamsideline.com/Collierville" target="_blank">Registration</a>
+                                                  <a class="dropdown-button" href="#!" data-activates="registrationdropdownalt" data-beloworigin="true">Registration
+                                                    <i class="mdi-navigation-arrow-drop-down right"></i>
+                                                  </a>
                                                 </li>
                                                 <li>
                                                   <a href="seasonticket.html" target="_blank">Season Tickets</a>
@@ -306,6 +308,27 @@
   
 
     <script  src="js/index.js"></script>
+    <script>
+      $(document).ready(function(){
+                                                            $('.button-collapse').sideNav({
+                                                                menuWidth: 300, // Default is 300
+                                                                edge: 'left', // Choose the horizontal origin
+                                                                closeOnClick: false, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                                                                draggable: true // Choose whether you can drag to open on touch screens
+                                                              }
+                                                            );
+
+ document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.dropdown-trigger');
+    var instances = M.Dropdown.init(elems, options);
+  });
+
+  // Or with jQuery
+
+  $('.dropdown-trigger').dropdown();
+                                                            // START OPEN
+                                                          });
+                                                        </script>
 
 
 
