Coach Fix, Color Scheme Update

--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -542,7 +542,7 @@
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
                                                   <div class="overall">
-                                                    <div class="centeredalt">
+                                                    <div class="centeredalt" style="color:white;">
                                                       <h1>
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> 9 and 10 Year Old Football </center></h1>
 
