New Schedule Page
Holds all schedules for all teams

--- a/9and10yearold.html
+++ b/9and10yearold.html
@@ -224,7 +224,7 @@
                                       
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
-                                      <div id="maroonschedule" style="overflow-y:scroll" class="modal">
+                                      <div id="9and10maroonschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
                                                   <h4>9 and 10 Year Old Maroon Football Schedule</h4>
                                                   <p>
@@ -347,7 +347,7 @@
                                                   </div>
                                                 </div>
 
-                                       <div id="whiteschedule" style="overflow-y:scroll" class="modal">
+                                       <div id="9and10whiteschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
                                                   <h4>9 and 10 Year Old White Football Schedule</h4>
                                                   <p>
@@ -551,14 +551,14 @@
                                                 <div class="rowcenter">
                                                 <div class="row">
                                                   <div class="col pl-3">
-  <a style="background-color:#722D3C;" class=" btn modal-trigger" href="#maroonschedule"><font size="+1">Maroon </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
+  <a style="background-color:#722D3C;" class=" btn modal-trigger" href="#9and10maroonschedule"><font size="+1">Maroon </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
 </div>
 
 <div class="col pl-3">
   <a style="background-color:#722D3C;" class=" btn modal-trigger" href="#maroonroster"><font size="+1">Maroon Roster </font></a>
 </div>
                                                 <div class="col pl-3">
-  <a style="background-color:#722D3C;" class=" btn modal-trigger" href="#whiteschedule"><font size="+1">White </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
+  <a style="background-color:#722D3C;" class=" btn modal-trigger" href="#9and10whiteschedule"><font size="+1">White </font><i class="fa fa-calendar fa-2x" aria-hidden="true"></i></a>
 </div>
 
    <div class="col pl-3">
