Dragon Day Post

--- a/news.html
+++ b/news.html
@@ -324,7 +324,17 @@
 <hr class="featurette-divider">
 
 
-
+<div class="row featurette ml-2">
+    <div class="col-md-12 order-md-2 "> 
+            <h4 class="featurette-heading order-md-2 pl-2">August 4th - Dragon Day Success (Thank you Sponsors!)</h4><p class="lead">
+            <ul class="newsstuff ml-5">
+              <li>We had a great showing at our Dragon Day this Saturday! We loved seeing everybody, and wanted to send thank you's to all of those involved. Thank you Dragon Band, Pom, Cheer, Roger Cotton, and Mr.Aiken for supporting and assisting with the whole day! We would like to thank our Sponsors, Mama D's Italian Ice and Kroger for their time and efforts in making the day even better! Especially thank you to all player and coaches family members for their time and support!
+                   <br><br> #DragonDay2018</li>
+           <li>  <img src="imgs/dragonday2018.jpg" style="max-width:400px;max-height: 200px;height:auto;width:auto;background-color: black;"></li>
+            </ul>
+           </p>
+    </div>
+  </div>
    <div class="row featurette ml-2">
     <div class="col-md-12 order-md-2 "> 
             <h4 class="featurette-heading order-md-2 pl-2">July 7th - Coach O'Neill Celebrates a Win Off The Field</h4><p class="lead">
