--- a/index.html
+++ b/index.html
@@ -430,18 +430,15 @@
                                                               <div class="col-md-6">
                                                                 <div class="card flex-md-row mb-4 box-shadow h-md-250">
                                                                   <div class="card-body d-flex flex-column align-items-start">
-                                                                    <strong class="d-inline-block mb-2 text-success">Dragons in the NFL</strong>
+                                                                    <strong class="d-inline-block mb-2 text-primary">Dragon Day Success!</strong>
                                                                     <h3 class="mb-0">
-                                                                      <a class="text-light" href="#">Hunter Bradley Drafted</a>
+                                                                      <a class="text-light" href="#">Thank you to our Sponsors</a>
                                                                     </h3>
-                                                                    <div class="mb-1 text-sm">May 15th</div>
+                                                                    <div class="mb-1 text-sm">August 4th</div>
                                                                     <div class="row">
-                                                                      <div class="col-md-6">
-                                                                        <p class="card-text mb-auto">Hunter Bradley, a former Collierville Dragon, was recently drafted by the Green Bay Packers.<br>#DragonsintheNFL</p>
-                                                                      </div>
-                                                                      <div class="col-md-3">
-                                                                        <img src="imgs/huntercamp.jpg" style="max-width:230px;max-height: 100px;height:auto;width:auto;background-color: black;">
-                                                                        </div>
+                                                                      <div class="col-md-12">
+                                                                        <p class="card-text mb-auto">Thank you to the fans for coming out to #DragonDay and to all of our sponsors/help <br>CHS Band, Cheer, Pom, Mr.Aiken, Roger Cotton, All clubs selling #DragonGear, Volunteers, and Kroger for donating water, and Mama D's Italian Ice for their support. Also, all player parents and coaches. A big Shoutout to all player and coach family members for their time! </p>                                                </div>
+                                                                      
                                                                       </div>
                                                                     </div>
                                                                   </div>
@@ -467,7 +464,25 @@
 </div>
 
                                                           <div class="row mb-2">
-
+  <div class="col-md-6">
+                                                                <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                                                                  <div class="card-body d-flex flex-column align-items-start">
+                                                                    <strong class="d-inline-block mb-2 text-success">Dragons in the NFL</strong>
+                                                                    <h3 class="mb-0">
+                                                                      <a class="text-light" href="#">Hunter Bradley Drafted</a>
+                                                                    </h3>
+                                                                    <div class="mb-1 text-sm">May 15th</div>
+                                                                    <div class="row">
+                                                                      <div class="col-md-6">
+                                                                        <p class="card-text mb-auto">Hunter Bradley, a former Collierville Dragon, was recently drafted by the Green Bay Packers.<br>#DragonsintheNFL</p>
+                                                                      </div>
+                                                                      <div class="col-md-3">
+                                                                        <img src="imgs/huntercamp.jpg" style="max-width:230px;max-height: 100px;height:auto;width:auto;background-color: black;">
+                                                                        </div>
+                                                                      </div>
+                                                                    </div>
+                                                                  </div>
+                                                                </div>
                                                                  <div class="col-md-6">
                                                                 <div class="card flex-md-row mb-4 box-shadow h-md-250">
                                                                   <div class="card-body d-flex flex-column align-items-start">
