Edited JV Schedule & Changed Contact Info
Livi

--- a/sponsors.html
+++ b/sponsors.html
@@ -521,7 +521,7 @@
                                                 <div class="spacer">
                                     <div class="spacer2"></div>
                                                 <div class="rowcenter2">
-<div class="pl-3"><p>Sponsoring the CHS Kickoff Club is one of the best ways to advertise your business in Collierville. Dragon Football on Friday Nights is the biggest event in town. If you’d like to be a part of the Friday night lights this year, contact Hayden Argo (hargo1170@gmail.com) today!
+<div class="pl-3"><p>Sponsoring the CHS Kickoff Club is one of the best ways to advertise your business in Collierville. Dragon Football on Friday Nights is the biggest event in town. If you’d like to be a part of the Friday night lights this year, contact Mike Collier (mike.collier429@gmail.com) today!
 
 </p>
    <p>If you would like to pay online for your sponsorship, please visit our <a href="http://www.teamsideline.com/sites/Collierville/home">Payment Site</a> and enroll to make your payment.
