--- a/varsity.html
+++ b/varsity.html
@@ -373,24 +373,24 @@
                                                         <th>Location</th>
                                                       </tr>
                                                       <tr>
+                                                        <td>August 20th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>@ Arlington (following Freshmen game)</td>
+                                                      </tr>
+                                                      <tr>
                                                         <td>August 27th</td>
                                                         <td>6:00 PM</td>
                                                         <td>vs Ridgeway</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>August 30th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>vs Munford</td>
-                                                      </tr>
-                                                      <tr>
                                                         <td>Septempber 10th</td>
-                                                        <td>5:30 PM</td>
-                                                        <td>vs Braircrest</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Braircrest (Freshmen&Sophomore JV players ONLY)</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 17th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Cordova</td>
+                                                        <td>vs Cordova (following Freshmen game)</td>
                                                       </tr>
                                                       <tr>
                                                         <td>September 24th</td>
@@ -400,12 +400,12 @@
                                                       <tr>
                                                         <td>October 1st</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs White Station</td>
+                                                        <td>vs White Station (following Freshmen game)</td>
                                                       </tr>
                                                       <tr>
                                                         <td>October 15th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>vs Bartlett</td>
+                                                        <td>vs Bartlett (following Freshmen game)</td>
                                                       </tr>
                                                     </tbody>
                                                   </table>
